apps/logistics/logistics.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: logistics
  labels:    
    app: logistics
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: logistics
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logistics
  labels:
    app: logistics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logistics
  template:
    metadata:
      labels:
        app: logistics
    spec:
      containers:
        - name: logistics
          image: "docker.io/burrsutter/hello:1.0.0"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
