apps/logistics/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logistics
  labels:    
    app: logistics
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: logistics
